--- a/public/package.json
+++ b/public/package.json
@@ -35,6 +35,7 @@
     "nodemon": "^1.11.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-router": "^2.8.1",
     "redux": "^3.6.0",
     "replace": "^0.3.0",
     "serve-static": "^1.11.1"
