adding paths to css build commands

--- a/public/package.json
+++ b/public/package.json
@@ -8,12 +8,14 @@
     "clean": "rm -rf ./server && mkdir server",
     "build:js": "./node_modules/.bin/browserify src/js/app.js -o dist/app.min.js -t [ babelify --presets [ es2015 react ] ] -p [ minifyify --no-map --uglify ]",
     "dev:js": "./node_modules/.bin/browserify src/js/app.js -o server/app.min.js -d -t [ babelify --presets [ es2015 react ] ]",
-    "build:css": "node-sass --output-style compressed --include-path src/scss src/scss/index.scss dist/app.min.css",
-    "dev:css": "node-sass --sourceMap server/app.min.css.map --include-path ./node_modules/bulma --include-path src/scss src/scss/index.scss server/app.min.css",
+    "build:css": "node-sass --output-style compressed --include-path ./node_modules/bulma --include-path ./node_modules/font-awesome/scss --include-path src/scss src/scss/index.scss dist/app.min.css",
+    "dev:css": "node-sass --sourceMap server/app.min.css.map --include-path ./node_modules/bulma --include-path ./node_modules/font-awesome/scss --include-path src/scss src/scss/index.scss server/app.min.css",
     "build:html": "cp src/index.html dist/index.html",
     "dev:html": "cp src/index.html server/index.html & ./node_modules/.bin/replace \"</head>\" \"<script src='//localhost:35729/livereload.js'></script></head>\" server/index.html",
-    "dev": "npm run dev:js & npm run dev:css & npm run dev:html",
-    "build": "rm -rf ./dist && mkdir dist && npm run build:js & npm run build:css & npm run build:html",
+    "dev:assets": "mkdir ./server/fonts & cp -r ./node_modules/font-awesome/fonts ./server",
+    "build:assets": "mkdir ./dist/fonts & cp -r ./node_modules/font-awesome/fonts ./dist",
+    "dev": "npm run dev:js & npm run dev:css & npm run dev:html & npm run dev:assets",
+    "build": "rm -rf ./dist && mkdir dist && npm run build:js & npm run build:css & npm run build:html & npm run build:assets",
     "watch:js": "nodemon --watch src -e js -x \"npm run dev:js\"",
     "watch:css": "nodemon --watch src -e scss -x \"npm run dev:css\"",
     "watch:html": "nodemon --watch src -e html -x \"npm run dev:html\"",
@@ -29,6 +31,7 @@
     "browserify": "^13.1.0",
     "bulma": "^0.2.3",
     "connect": "^3.5.0",
+    "font-awesome": "^4.6.3",
     "livereload": "^0.5.0",
     "minifyify": "^7.3.3",
     "node-sass": "^3.10.1",
