--- a/public/package.json
+++ b/public/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/.bin/mocha --compilers js:babel-core/register --recursive tests",
     "clean": "rm -rf ./server && mkdir server",
     "build:js": "./node_modules/.bin/browserify src/js/app.js -o dist/app.min.js -t [ babelify --presets [ es2015 react ] ] -p [ minifyify --no-map --uglify ]",
     "dev:js": "./node_modules/.bin/browserify src/js/app.js -o server/app.min.js -d -t [ babelify --presets [ es2015 react ] ]",
@@ -43,5 +43,10 @@
     "replace": "^0.3.0",
     "serve-static": "^1.11.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "enzyme": "^2.4.1",
+    "mocha": "^3.1.2",
+    "react-addons-test-utils": "^15.3.2"
+  }
 }
